src/test/ui/conditional-compilation/cfg-attr-unknown-attribute-macro-expansion.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: cannot find attribute macro `unknown` in this scope
=======
error: cannot find attribute `unknown` in this scope
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/cfg-attr-unknown-attribute-macro-expansion.rs:3:27
   |
LL |         #[cfg_attr(all(), unknown)]
   |                           ^^^^^^^
...
LL | foo!();
   | ------- in this macro invocation

error: aborting due to previous error

